rasn-compiler-tests/tests/snapshots/parse_test__parses_modules@itu-t_x_x419_1999_MTSAccessProtocol.asn1.snap
---
source: rasn-compiler-tests/tests/parse_test.rs
input_file: rasn-compiler-tests/tests/modules/itu-t_x_x419_1999_MTSAccessProtocol.asn1
---
Warnings:
LinkerError in ASN grammar: Failed to resolve supertype ROS-SingleAS of parameterized implementation.
LinkerError in ASN grammar: Failed to resolve supertype ROS-SingleAS of parameterized implementation.
LinkerError in ASN grammar: Failed to resolve supertype ROS-SingleAS of parameterized implementation.
LinkerError in ASN grammar: Failed to resolve supertype ROS-SingleAS of parameterized implementation.
LinkerError in ASN grammar: Failed to resolve supertype ROS-SingleAS of parameterized implementation.
LinkerError in ASN grammar: Failed to resolve supertype Bind of parameterized implementation.
LinkerError in ASN grammar: Failed to link value with 'Code'
LinkerError in ASN grammar: Failed to link value with 'Code'
LinkerError in ASN grammar: Failed to link value with 'Code'
LinkerError in ASN grammar: Failed to link value with 'Code'
LinkerError in ASN grammar: Failed to link value with 'Code'
LinkerError in ASN grammar: Failed to link value with 'Code'
LinkerError in ASN grammar: Failed to link value with 'Code'
LinkerError in ASN grammar: Failed to link value with 'Code'
LinkerError in ASN grammar: Failed to link value with 'Code'
LinkerError in ASN grammar: Failed to link value with 'Code'
LinkerError in ASN grammar: Failed to link value with 'Code'
LinkerError in ASN grammar: Failed to link value with 'Code'
LinkerError in ASN grammar: Failed to link value with 'Code'
LinkerError in ASN grammar: Failed to link value with 'Code'
LinkerError in ASN grammar: Failed to link value with 'Code'
LinkerError in ASN grammar: Failed to link value with 'Code'
LinkerError in ASN grammar: Failed to link value with 'Code'
LinkerError in ASN grammar: Failed to link value with 'Code'
LinkerError in ASN grammar: Failed to link value with 'Code'
LinkerError in ASN grammar: Failed to link value with 'Code'
LinkerError in ASN grammar: Failed to link value with 'Code'
LinkerError in ASN grammar: Failed to link value with 'Code'
LinkerError in ASN grammar: Failed to link value with 'Code'
LinkerError in ASN grammar: Failed to link value with 'Code'
LinkerError in ASN grammar: Failed to link value with 'Code'


Generated:
#[allow(
    non_camel_case_types,
    non_snake_case,
    non_upper_case_globals,
    unused,
    clippy::too_many_arguments
)]
pub mod mtsaccess_protocol {
    extern crate alloc;
    use super::mhsprotocol_object_identifiers::{
        ID_AC_MTS_ACCESS_88, ID_AC_MTS_ACCESS_94, ID_AC_MTS_FORCED_ACCESS_88,
        ID_AC_MTS_FORCED_ACCESS_94, ID_AC_MTS_FORCED_RELIABLE_ACCESS_88,
        ID_AC_MTS_FORCED_RELIABLE_ACCESS_94, ID_AC_MTS_RELIABLE_ACCESS_88,
        ID_AC_MTS_RELIABLE_ACCESS_94, ID_AS_MASE_88, ID_AS_MASE_94, ID_AS_MDSE_88, ID_AS_MDSE_94,
        ID_AS_MSSE, ID_AS_MTS, ID_AS_MTS_RTSE,
    };
    use super::mtsabstract_service::{
        ADMINISTRATION, DELIVERY, MTS_ACCESS_CONTRACT, MTS_CONNECT, MTS_FORCED_ACCESS_CONTRACT,
        SUBMISSION,
    };
    use super::mtsabstract_service88::{
        ADMINISTRATION_88, DELIVERY_88, MTS_ACCESS_CONTRACT_88, MTS_FORCED_ACCESS_CONTRACT_88,
    };
    use super::reliable_transfer_apdu::{RTOACapdu, RTORJapdu, RTORQapdu};
    use super::remote_operations_abstract_syntaxes::ACSE_ABSTRACT_SYNTAX;
    use super::remote_operations_generic_ros_pdus::{Bind, InvokeId, Unbind};
    use super::remote_operations_information_objects::Code;
    use super::remote_operations_information_objects_extensions::*;
    use super::remote_operations_realizations::{
        ACSE, ASSOCIATION_BY_RTSE, P_DATA, TRANSFER_BY_RTSE,
    };
    use super::remote_operations_useful_definitions::ROSSingleAS;
    use core::borrow::Borrow;
    use rasn::prelude::*;
    use std::sync::LazyLock;
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    #[rasn(delegate)]
    pub struct AbortReason(pub Integer);
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    #[rasn(choice)]
    pub enum MTSBindUnbindPDUs {
        #[rasn(value("0.."))]
        bind(Bind),
        #[rasn(value("0.."))]
        unbind(Unbind),
    }
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    #[rasn(delegate)]
    pub struct MTSInvokeIds(pub InvokeId);
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    #[rasn(delegate)]
    pub struct MessageAdministrationPDUs(pub ROSSingleAS);
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    #[rasn(delegate)]
    pub struct MessageAdministrationPDUs88(pub ROSSingleAS);
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    #[rasn(delegate)]
    pub struct MessageDeliveryPDUs(pub ROSSingleAS);
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    #[rasn(delegate)]
    pub struct MessageDeliveryPDUs88(pub ROSSingleAS);
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    #[rasn(delegate)]
    pub struct MessageSubmissionPDUs(pub ROSSingleAS);
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    #[rasn(set)]
    pub struct RTABapdu {
        #[rasn(tag(context, 0), identifier = "abortReason")]
        pub abort_reason: Option<AbortReason>,
        #[rasn(tag(context, 1), identifier = "reflectedParameter")]
        pub reflected_parameter: Option<BitString>,
        #[rasn(tag(context, 2), identifier = "userdataAB")]
        pub userdata_ab: Option<Any>,
    }
    impl RTABapdu {
        pub fn new(
            abort_reason: Option<AbortReason>,
            reflected_parameter: Option<BitString>,
            userdata_ab: Option<Any>,
        ) -> Self {
            Self {
                abort_reason,
                reflected_parameter,
                userdata_ab,
            }
        }
    }
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    #[rasn(choice, identifier = "RTSE-apdus")]
    pub enum RTSEApdus {
        #[rasn(tag(context, 16), identifier = "rtorq-apdu")]
        rtorq_apdu(RTORQapdu),
        #[rasn(tag(context, 17), identifier = "rtoac-apdu")]
        rtoac_apdu(RTOACapdu),
        #[rasn(tag(context, 18), identifier = "rtorj-apdu")]
        rtorj_apdu(RTORJapdu),
        #[rasn(identifier = "rttp-apdu")]
        rttp_apdu(RTTPapdu),
        #[rasn(identifier = "rttr-apdu")]
        rttr_apdu(RTTRapdu),
        #[rasn(tag(context, 22), identifier = "rtab-apdu")]
        rtab_apdu(RTABapdu),
    }
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    #[rasn(delegate)]
    pub struct RTTPapdu(pub Integer);
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    #[rasn(delegate)]
    pub struct RTTRapdu(pub OctetString);
    pub static ERR_CONTROL_VIOLATES_REGISTRATION: LazyLock<Code> =
        LazyLock::new(|| Code(Code(Code::local(14))));
    pub static ERR_DEFERRED_DELIVERY_CANCELLATION_REJECTED: LazyLock<Code> =
        LazyLock::new(|| Code(Code(Code::local(8))));
    #[doc = "\tRemote Errors"]
    pub static ERR_DELIVERY_CONTROL_VIOLATED: LazyLock<Code> =
        LazyLock::new(|| Code(Code(Code::local(1))));
    pub static ERR_ELEMENT_OF_SERVICE_NOT_SUBSCRIBED: LazyLock<Code> =
        LazyLock::new(|| Code(Code(Code::local(4))));
    pub static ERR_INCONSISTENT_REQUEST: LazyLock<Code> =
        LazyLock::new(|| Code(Code(Code::local(11))));
    pub static ERR_MESSAGE_SUBMISSION_IDENTIFIER_INVALID: LazyLock<Code> =
        LazyLock::new(|| Code(Code(Code::local(7))));
    pub static ERR_NEW_CREDENTIALS_UNACCEPTABLE: LazyLock<Code> =
        LazyLock::new(|| Code(Code(Code::local(6))));
    pub static ERR_OLD_CREDENTIALS_INCORRECTLY_SPECIFIED: LazyLock<Code> =
        LazyLock::new(|| Code(Code(Code::local(5))));
    pub static ERR_OPERATION_REFUSED: LazyLock<Code> =
        LazyLock::new(|| Code(Code(Code::local(16))));
    pub static ERR_ORIGINATOR_INVALID: LazyLock<Code> =
        LazyLock::new(|| Code(Code(Code::local(2))));
    pub static ERR_RECIPIENT_IMPROPERLY_SPECIFIED: LazyLock<Code> =
        LazyLock::new(|| Code(Code(Code::local(3))));
    #[doc = "\tRemote Errors"]
    pub static ERR_REGISTER_REJECTED: LazyLock<Code> =
        LazyLock::new(|| Code(Code(Code::local(10))));
    pub static ERR_REMOTE_BIND_ERROR: LazyLock<Code> =
        LazyLock::new(|| Code(Code(Code::local(15))));
    pub static ERR_SECURITY_ERROR: LazyLock<Code> = LazyLock::new(|| Code(Code(Code::local(12))));
    #[doc = "\tRemote Errors"]
    pub static ERR_SUBMISSION_CONTROL_VIOLATED: LazyLock<Code> =
        LazyLock::new(|| Code(Code(Code::local(1))));
    pub static ERR_UNSUPPORTED_CRITICAL_FUNCTION: LazyLock<Code> =
        LazyLock::new(|| Code(Code(Code::local(13))));
    pub static OP_CANCEL_DEFERRED_DELIVERY: LazyLock<Code> =
        LazyLock::new(|| Code(Code(Code::local(7))));
    pub static OP_CHANGE_CREDENTIALS: LazyLock<Code> = LazyLock::new(|| Code(Code(Code::local(8))));
    pub static OP_DELIVERY_CONTROL: LazyLock<Code> = LazyLock::new(|| Code(Code(Code::local(2))));
    #[doc = "\tRemote Operations"]
    pub static OP_MESSAGE_DELIVERY: LazyLock<Code> = LazyLock::new(|| Code(Code(Code::local(5))));
    #[doc = "\tRemote Operations"]
    pub static OP_MESSAGE_SUBMISSION: LazyLock<Code> = LazyLock::new(|| Code(Code(Code::local(3))));
    pub static OP_PROBE_SUBMISSION: LazyLock<Code> = LazyLock::new(|| Code(Code(Code::local(4))));
    #[doc = "\tRemote Operations"]
    pub static OP_REGISTER: LazyLock<Code> = LazyLock::new(|| Code(Code(Code::local(1))));
    pub static OP_REPORT_DELIVERY: LazyLock<Code> = LazyLock::new(|| Code(Code(Code::local(6))));
    pub static OP_SUBMISSION_CONTROL: LazyLock<Code> = LazyLock::new(|| Code(Code(Code::local(2))));
}
