rasn-compiler-tests/tests/snapshots/parse_test__parses_modules@itu-t_x_x420_1999_IPMSAbstractService.asn1.snap
---
source: rasn-compiler-tests/tests/parse_test.rs
input_file: rasn-compiler-tests/tests/modules/itu-t_x_x420_1999_IPMSAbstractService.asn1
---
Generated:
#[allow(
    non_camel_case_types,
    non_snake_case,
    non_upper_case_globals,
    unused,
    clippy::too_many_arguments
)]
pub mod ipmsabstract_service {
    extern crate alloc;
    use super::ipmsinformation_objects::*;
    use super::ipmsobject_identifiers::{ID_PT_MANAGEMENT, ID_PT_ORIGINATION, ID_PT_RECEPTION};
    use super::mtsabstract_service::*;
    use core::borrow::Borrow;
    use rasn::prelude::*;
    use std::sync::LazyLock;
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash, Copy)]
    #[rasn(enumerated)]
    pub enum SubscriptionProblem {
        #[rasn(identifier = "ipms-eos-not-subscribed")]
        ipms_eos_not_subscribed = 0,
        #[rasn(identifier = "mts-eos-not-subscribed")]
        mts_eos_not_subscribed = 1,
    }
}
